# circuit-sim

./: .gitignore  README.md  circuit_analyzer.py  main.py  pyproject.toml  requirements.txt  tests_engine.py  tests_mixed.py  themes.py
.github/workflows/: ci.yml
docs/: architecture.md
engine/: __init__.py  bridges.py  components.py  digital_engine.py  mixed_signal.py  mna.py
firmware/: README.md
pynode/: circuit_analyzer.py  subcircuit_manager.py  theme_manager.py
pynode/engine/: README.md  __init__.py  bridges.py  components.py  digital_engine.py  hw_stream.py  mixed_signal.py
pynode/ui/: README.md  scene.py  style.py
pynode/ui/dialogs/: bode_dialog.py  circuit_analyzer_dialog.py  component_dialog.py  function_generator_dialog.py  multimeter_dialog.py  oscilloscope_dialog.py  power_triangle_dialog.py  resistor_calc_dialog.py  settings_dialog.py  subcircuit_edit_dialog.py  tl082_unit_dialog.py
pynode/ui/items/: __init__.py  component_item.py  wire_item.py
tests/: test_engine.py  test_mixed.py
themes/: README.md  UMG.json  solarized_dark.json
ui/: component_metadata.py  scene.py  style.py
ui/dialogs/: bode_dialog.py  circuit_analyzer_dialog.py  component_dialog.py  component_picker_dialog.py  function_generator_dialog.py  hardware_source_dialog.py  multimeter_dialog.py  oscilloscope_dialog.py  power_triangle_dialog.py
ui/items/: component_item.py  wire_item.py
